<resources>
    <string name="app_name">GiphyTestApp</string>
    <string name="search">Search</string>
    <string name="giphy">Giphy</string>
    <string name="confirmation_question">Like or remove?</string>
    <string name="yes">Like</string>
    <string name="no">Remove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account">Create your Account</string>
    <string name="email_address">Email Address</string>
    <string name="continue_text">Continue</string>
    <string name="password">Password</string>
    <string name="log_in_account">Log in Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="search_menu_title">Search</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="auth_default_error_message">There is an error! Try again!</string>
    <string name="exit">Exit</string>
    <string name="surname">Surname</string>
    <string name="loading">Loading...</string>
    <string name="try_again">Try again!</string>
    <string name="phone">Phone</string>
</resources>